[package]
name = "tokeihub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
dotenvy = "0.15.7"
eyre = "0.6.8"
git2 = "0.18.0"
octocrab = "0.30.1"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json"] }
sea-orm = { version = "0.12.2", features = [
	"sqlx-sqlite",
	"runtime-tokio-rustls",
	"macros",
] }
sea-orm-migration = "0.12.2"
serde = "1.0.188"
tokei = "12.1.2"
tokio = "1.32.0"
